crates/graphcal-eval/tests/snapshots/error_snapshots__error_domain_union_member_violation.snap
---
source: crates/graphcal-eval/tests/error_snapshots.rs
assertion_line: 504
expression: rendered
---
field `Burn.dv` above maximum (10 km/s)
