crates/graphcal-eval/tests/snapshots/error_snapshots__error_domain_violation.snap
---
source: crates/graphcal-eval/tests/error_snapshots.rs
expression: rendered
---
above maximum (2000 kg)
