crates/graphcal-eval/tests/snapshots/error_snapshots__error_duplicate_inline_dag_binding.snap
---
source: crates/graphcal-eval/tests/error_snapshots.rs
expression: rendered
---
duplicate DAG binding `a`
    Diagnostic severity: error
Begin snippet for duplicate_inline_dag_binding.gcl starting at line 1, column 1

snippet line 1: node result: Dimensionless = @combine(a: 1.0, a: 2.0).out;
    label at line 1, column 39: first bound here
    label at line 1, column 47: duplicate binding
diagnostic help: each name may appear at most once in a DAG binding list
diagnostic code: graphcal::P025
