crates/graphcal-eval/tests/snapshots/error_snapshots__error_duplicate_let.snap
---
source: crates/graphcal-eval/tests/error_snapshots.rs
expression: rendered
---
duplicate `let` binding `a`
    Diagnostic severity: error
Begin snippet for duplicate_let.gcl starting at line 2, column 1

snippet line 2: node x: Dimensionless = {
snippet line 3:     let a = 1.0;
    label at line 3, column 9: first defined here
snippet line 4:     let a = 2.0;
    label at line 4, column 9: duplicate binding here
snippet line 5:     a
diagnostic help: each `let` binding must have a unique name within a block
diagnostic code: graphcal::S001
